--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
   .contain{
     width: 100%;
-    height: 150px;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,10 +96,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     margin-bottom: 10px;
   }
   .contain img {
-    width: 100%; 
-    max-height: 100%;
-    object-fit: fill; 
-   
+  max-height: 100%;  
+  width: auto;    
+  object-fit: contain;
   }
 
   .popup h2 {
@@ -175,6 +174,29 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     from { opacity: 0; transform: scale(0.9); }
     to { opacity: 1; transform: scale(1); }
   }
+
+
+/* ,,,,,,,,,,,call btn................... */
+
+.call-float {
+  position: fixed;
+  bottom: 20px;         
+  left: 20px;           
+  z-index: 1000;
+}
+
+.call-float img {
+  width: 60px;         
+  height: 60px;
+  border-radius: 50%;  
+  box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+  transition: transform 0.2s;
+}
+
+.call-float img:hover {
+  transform: scale(1.1); 
+}
+
 
 </style>
 
@@ -1142,6 +1164,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 
     <!--/.dl-cursor-->
+
+
+
+<!-- Floating Call Button -->
+<a href="tel:+919558212200" class="call-float">
+  <img src="assets/img/phone-call.png" alt="Call Now" />
+</a>
+
+
 
     <!--jQuery Lib-->
     <script src="assets/js/vendor/jquary-3.6.0.min.js"></script>
