fix: updated popup image style

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   .popup .close-btn {
     position: absolute;
     top: 10px;
-    right: 15px;
-    background: red;
+    right: 10px;
+    background: rgb(0, 0, 0);
     color: #fff;
     border: none;
     font-size: 18px;
@@ -1187,7 +1187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </ul>
 
       <!-- Call Now Button -->
-      <a href="tel:+919876543210" class="call-btn">📞 Call Now</a>
+      <a href="tel:+919876543210" class="call-btn">📞 Call Now & Get 20% off</a>
     </div>
   </div>
 
